# llm_zoomcamp_25

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
00-preworkshop/: 01-text_vectorization.py  02-weighted_text_search.py  03-TextSearch.py  04-sklearn_embeddings.py  05-transformer_embeddings.py  Readme.md
01-intro/: elastic-search.md
02-vector-search/: Qdrant.md
03-evaluation/: Notes.md
04-orchestration/: Readme.md  combine_data.py
04-orchestration/backend/: Readme.md  app.py  engines.py  models.py  utils.py
04-orchestration/frontend/: package-lock.json  package.json
04-orchestration/frontend/src/app/: layout.js  page.js  page.module.css
04-orchestration/frontend/src/app/chat/: page.js
04-orchestration/frontend/src/components/: ActiveChat.jsx  ChatMessage.jsx  History.jsx  HistoryBtn.jsx
04-orchestration/frontend/src/styles/: activechat.module.css  chatmsg.module.css  history.module.css  historybtn.module.css
04-orchestration/proj/: app.py  dependencies.py  evaluate_rag.py  models.py  prompts.py  utils.py
homeworks/: module3.ipynb
llmzmcp/data/: __init__.py  datasets.py
llmzmcp/module1/: __init__.py  client.py  elastic_search_rag.py  min_search_rag.py  utils.py
llmzmcp/module2/: hybrid_search.py  sparse_search.py  vector_search.py  vector_search_rag.py
llmzmcp/module3/: __init__.py  functions.py  generate_ground_truth.py  offline_rag_eval_cossim.py  rag_eval_llm_judge.py  search_evaluation.py
llmzmcp/shared/: __init__.py  client.py  parallel.py
llmzmcp/utils/: __init__.py  cache.py  env.py  paths.py
