[project]
name = "llmzmcp"
version = "0.1.0"
description = "LLM ops zoomcamp 25"
authors = [
    {name = "Joses"}
]
license = {text = "MIT"}
readme = "README.md"
include = ["llmzmcp/data/*.json"]

requires-python = ">=3.10"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "openai (>=1.88.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "elasticsearch (==8.13.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "minsearch (>=0.0.3,<0.0.4)",
    "torch (>=2.7.1,<3.0.0)",
    "qdrant-client[fastembed] (>=1.14.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
